# deckfusion-backend

./: Dockerfile  Dockerfile.beat  Dockerfile.web  Dockerfile.worker  Makefile  README.md  pyproject.toml  requirements.txt
api/: apps.py  endpoints.py
config/: celery.py  settings.py  urls.py
entrypoints/: web.sh  worker.sh
landing/: admin.py  apps.py  models.py  serializers.py  views.py
landing/migrations/: 0001_initial.py
user/: admin.py  apps.py  models.py  permissions.py  serializers.py  views.py
user/migrations/: 0001_initial.py
user/utils/functions/: getters.py
utils/classes/: pagination.py  viewsets.py
utils/functions/: normalizers.py
utils/mixins/: model_mixins.py
