[tool.poetry]
name = "deckfusion-backend"
version = "0.1.0"
description = "A Django REST server for the DeckFusion backend API"
authors = ["Sean O'Leary <seamicole@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
celery = "^5.4.0"
channels = "^4.2.0"
dj-database-url = "^2.2.0"
django = "^4.2.7"
django-celery-beat = "^2.6.0"
django-cors-headers = "^4.4.0"
django-extensions = "^3.2.3"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"
drf-nested-routers = "^0.94.1"
dynamic-rest = {git = "https://github.com/AltSchool/dynamic-rest.git"}
psycopg2-binary = "^2.9.9"
python = "^3.10"
python-decouple = "^3.8"
redis = "^5.0.7"
unidecode = "^1.3.8"
uvicorn = "^0.32.0"
whitenoise = "^6.8.2"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
